--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,7 @@
 /* ----- import font(s) ----- */
 
 @import url("https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;600;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
 
 /*
 =============== 
@@ -14,7 +15,7 @@ Variables
     --clr-primary-black: hsl(0, 0%, 20%);
     --clr-primary-blue-dark: hsl(218, 50%, 21%);
     --clr-primary-blue-pale: hsl(223, 30%, 95%);
-    --clr-primary-blue-mid: hsl(219, 33%, 90%);
+    --clr-primary-blue-mid: hsl(220, 29%, 90%);
     --clr-primary-gold: hsl(47, 100%, 61%);
     /* Letter spacing */
     --ls-spaced-main: letter-spacing: 0.01rem;
@@ -184,6 +185,11 @@ aside {
     position: relative;
     top: -.625rem;
     overflow-y: hidden;
+}
+
+footer {
+    padding: 3.125rem 0 .875rem;
+    background-color: var(--clr-primary-blue-mid);
 }
 
 
@@ -1752,11 +1758,6 @@ Footer
 ===============
 */
 
-footer {
-    padding: 3.125rem 0 4.375rem;
-    background-color: var(--clr-primary-blue-mid);
-}
-
 .footer p,
 .footer ul {
     line-height: 1.5;
@@ -1903,4 +1904,46 @@ footer>.container>.row>.col-lg-6 {
 
 .footer .footer__links-inline li:last-child {
     border: 0;
+}
+
+
+/*
+=============== 
+Attribution
+===============
+*/
+
+.attribution {
+    padding-top: 3.5rem;
+    text-align: center;
+}
+
+.attribution>p:first-child {
+    margin-bottom: .75rem;
+}
+
+.attribution>p:nth-child(2) {
+    font-size: .9rem;
+    font-family: Poppins, sans-serif;
+}
+
+.fa-heart {
+    padding-left: .1rem;
+    padding-right: .1rem;
+}
+
+.fa-mug-hot {
+    padding-left: .2rem;
+    padding-right: .2rem;
+}
+
+.fa-mug-hot {
+    position: relative;
+    top: -.05rem;
+    font-size: 1rem;
+}
+
+a.ltd {
+    color: hsl(184, 100%, 19%);
+    font-weight: 600;
 }
